Add artifacts to nexus server